--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -195,13 +195,7 @@ body{
 			margin-bottom: 15px;
 			width: 100%;
 			overflow: hidden;
-			img{
-				border-radius: 2%;
-				width: auto;
-				max-width: 100%;
-				height: auto;
-				max-height: 75%;
-			}
+
 			&__text {
 				width: 100%;
 				display: flex;
@@ -212,12 +206,119 @@ body{
 				p {
 					margin-top: -5px;
 				}
+				a {
+					color: $color__primary;
+					text-decoration: none;
+				}
 			}
 		}
+
 		padding-bottom: 30px;
 		border-bottom: 3px solid $color__tertiary;
 	}
 }
+
+.img {
+	&__qube {
+		background-image: url("../img/projects/qube1.png");
+		background-position: center; 
+		background-size: contain;
+		border-radius: 2%;
+		width: 100%;
+		height: 150px;
+		max-height: 150px;
+		position:relative;
+		display: flex;
+		align-items: center;
+		text-align: center;
+		&:after {
+			display: block;
+			flex-align: center;
+			align-content: center;
+			text-align: center;
+			content: 'Unity, C#';
+			padding-top: 65px;
+			position: absolute;
+			width: 100%; 
+			height:100%;
+			top:0; 
+			left:0;
+			background-color: rgba(255, 111, 105, 0.8);
+			color: #FFFFFF;
+			border-radius: 2%;
+			opacity: 0.0;
+			transition: all 0.5s;
+			-webkit-transition: all 0.5s;
+		}
+		&:hover:after { 
+			opacity: 1;
+        }
+	}
+	&__kuhker {
+		background-image: url("../img/projects/swarm.png");
+		background-position: center; 
+		border-radius: 2%;
+		width: 100%;
+		height: 150px;
+		max-height: 150px;
+		position:relative;
+		&:after {
+			display: block;
+			flex-align: center;
+			align-content: center;
+			text-align: center;
+			content: 'Android, Machine Learning, Java';
+			padding-top: 55px;
+			position: absolute;
+			width: 100%; 
+			height:100%;
+			top:0; 
+			left:0;
+			background-color: rgba(255, 111, 105, 0.8);
+			color: #FFFFFF;
+			border-radius: 2%;
+			opacity: 0.0;
+			transition: all 0.5s;
+			-webkit-transition: all 0.5s;
+		}
+		&:hover:after { 
+			opacity: 1;
+        }
+	}
+	&__swarm {
+		background-image: url("../img/projects/swarm.png");
+		background-position: center top; 
+		background-size: contain;
+		border-radius: 2%;
+		width: 100%;
+		height: 150px;
+		max-height: 150px;
+		position:relative;
+		&:after {
+			display: block;
+			flex-align: center;
+			align-content: center;
+			text-align: center;
+			content: 'Java, Python, Swarm Intelligence';
+			padding-top: 55px;
+			position: absolute;
+			width: 100%; 
+			height:100%;
+			top:0; 
+			left:0;
+			background-color: rgba(255, 111, 105, 0.8);
+			color: #FFFFFF;
+			border-radius: 2%;
+			opacity: 0.0;
+			transition: all 0.5s;
+			-webkit-transition: all 0.5s;
+		}
+		&:hover:after { 
+			opacity: 1;
+        }
+	}
+}
+
 
 .sidebar{
 	&__profile{
