--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -165,6 +165,10 @@ body{
 		&__text {
 			padding-left: 50px;
 			padding-right: 50px;
+			a {
+				color: $color__primary;
+				text-decoration: none;
+			}
 		}
 		&__list {	
 				display: flex;
@@ -220,7 +224,7 @@ body{
 
 .img {
 	&__qube {
-		background-image: url("../img/projects/qube1.png");
+		background-image: url("../img/projects/qube1.PNG");
 		background-position: center; 
 		background-size: contain;
 		border-radius: 2%;
@@ -255,7 +259,7 @@ body{
         }
 	}
 	&__kuhker {
-		background-image: url("../img/projects/swarm.png");
+		background-image: url("../img/projects/swarm.PNG");
 		background-position: center; 
 		border-radius: 2%;
 		width: 100%;
@@ -286,7 +290,7 @@ body{
         }
 	}
 	&__swarm {
-		background-image: url("../img/projects/swarm.png");
+		background-image: url("../img/projects/swarm.PNG");
 		background-position: center top; 
 		background-size: contain;
 		border-radius: 2%;
@@ -319,6 +323,28 @@ body{
 	}
 }
 
+.form__wrapper {
+	position: relative;
+	width: 100%;
+	display: block;
+	background-color: $color__primary;
+}	
+
+form {
+	position: relative;
+	width: 100%;
+}
+input[type=text], select, textarea {
+		position: relative;
+		width: 100%; /* Full width */
+		padding: 12px; /* Some padding */  
+		border: 1px solid #ccc; /* Gray border */
+		border-radius: 4px; /* Rounded borders */
+		box-sizing: border-box; /* Make sure that padding and width stays in place */
+		margin-top: 6px; /* Add a top margin */
+		margin-bottom: 16px; /* Bottom margin */
+		resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
 
 .sidebar{
 	&__profile{
@@ -345,11 +371,13 @@ body{
 			}
 		}		
 		&__img{
+			@include selection(#FFFFFF, #FFFFFF);
 			margin-top: 75px;
 			margin-bottom: 0px;
 			display: flex;
 			align-items: center;
 			img{
+				@include selection(#FFFFFF, #FFFFFF);
 				border-radius: 50%;
 				width: auto;
 				max-width: 150px;
